--- a/fitnesse/pom.xml
+++ b/fitnesse/pom.xml
@@ -101,6 +101,9 @@
                                     <contextPath>/test-webapp</contextPath>
                                 </webapp>
                             </webapps>
+                            <systemProperties>
+                              <fitnesse.working>${fitnesse.working}</fitnesse.working>
+                            </systemProperties>
                         </configuration>
                     </execution>
                     <execution>
