Read logback configuraton from a file specified in JNDI.
This addresses issue issue 79 (https://github.com/TeamDewberry/jmxdatamart/issues/79)

--- a/jmx-extractor-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/jmx-extractor-webapp/src/main/webapp/WEB-INF/web.xml
@@ -39,4 +39,8 @@
         <env-entry-name>jmxdatamart/settings-file</env-entry-name>
         <env-entry-type>java.lang.String</env-entry-type>
     </env-entry>
+    <env-entry>
+        <env-entry-name>logback/configuration-file</env-entry-name>
+        <env-entry-type>java.lang.String</env-entry-type>
+    </env-entry>
 </web-app>
