--- a/fitnesse/pom.xml
+++ b/fitnesse/pom.xml
@@ -24,6 +24,7 @@
         <derby.username>derbyuser</derby.username>
         <derby.password>derbyuser</derby.password>
         <derby.version>10.4.1.3</derby.version>
+        <logback.configurationFile>${fitnesse.working}/WEB-INF/classes/extractor-logback.xml</logback.configurationFile>
     </properties>
 
     <pluginRepositories>
